--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,13 @@
 /* LOGO */
 $little-logo: 200px;
 $big-logo: 350px;
-
 $nav-link: 1.3rem;
+$bg-jumbotron: #E2836C;
+// button general with a
+$general-button-text: black;
+$general-button-bg: white;
+$general-button-shadow: 0px 0px 10px 3px rgba(0,0,0,0.41);
+/* TEXT */
+$h1-size: 2.8rem;
+$h1-color: white;
+$jumbotron-p-color: white;
