--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,4 +90,25 @@ header .jumbotron .jumb-text a {
   border-radius: 5px;
 }
 
+/* LOGO */
+/* TEXT */
+.travel-services h2 {
+  font-size: 3rem;
+  color: black;
+}
+.travel-services .services-gallery {
+  max-height: 470px !important;
+  overflow: hidden;
+}
+.travel-services .services-gallery .legende-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+section {
+  margin: 50px auto;
+}
+
 /*# sourceMappingURL=style.css.map */
