--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -32,3 +32,11 @@
     text-transform: uppercase;
     border-radius: 5px;
 }
+// legende image services
+ @mixin legende-on-image(){
+   position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+ }
