--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -11,3 +11,7 @@ $general-button-shadow: 0px 0px 10px 3px rgba(0,0,0,0.41);
 $h1-size: 2.8rem;
 $h1-color: white;
 $jumbotron-p-color: white;
+$h2-color: black;
+$h2-size: 3rem;
+$var-color-legende: white;
+$var-size-legende: 2rem;
