--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -15,3 +15,7 @@ $h2-color: black;
 $h2-size: 3rem;
 $var-color-legende: white;
 $var-size-legende: 2rem;
+$gallery-big-height: auto;
+/* IMAGES */
+$little-img: 225px;
+$big-img: 460px;
