--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -33,10 +33,23 @@
     border-radius: 5px;
 }
 // legende image services
- @mixin legende-on-image(){
+ @mixin position-on-services(){
    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
     
+ }
+ // liens sur le site
+ @mixin link-on-site($color-link){
+   text-decoration: none;
+   color: $color-link;
+ }
+ @mixin services-img($image-size){
+      height: $image-size;
+      width:100%;
+      overflow: hidden;
+      border-radius:25px;
+      box-shadow: 0px 2px 3px 1px rgb(0 0 0 / 30%);
  }
